# PlateRecognizer

./: CMakeLists.txt  README.md  main.cpp
